{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 532,
  "lineage": "6ba2907b-e241-62fa-4a75-bbfc157ad257",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e68ff38c9e550e49",
            "association_id": "eipassoc-0029a3d3674f66daf",
            "domain": "vpc",
            "id": "eipalloc-0e68ff38c9e550e49",
            "instance": "i-0a7fbdada57ee8b11",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b2fb32e037906dd6",
            "private_dns": "ip-10-0-101-237.ec2.internal",
            "private_ip": "10.0.101.237",
            "public_dns": "ec2-44-206-10-239.compute-1.amazonaws.com",
            "public_ip": "44.206.10.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "hr"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.ignore_ami",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52ddcdf3a885741",
            "arn": "arn:aws:ec2:us-east-1:063965251904:instance/i-0a7fbdada57ee8b11",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7fbdada57ee8b11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b2fb32e037906dd6",
            "private_dns": "ip-10-0-101-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.237",
            "public_dns": "ec2-44-206-10-239.compute-1.amazonaws.com",
            "public_ip": "44.206.10.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0278bb758ece578d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb07858c67cbd694",
            "tags": {
              "Name": "hr-stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "hr-stag-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-0e6dd33171f21d00f"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:security-group/sg-0e6dd33171f21d00f",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6dd33171f21d00f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hr-stag-public-bastion-sg-20230514215000826400000006",
            "name_prefix": "hr-stag-public-bastion-sg-",
            "owner_id": "063965251904",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-stag-public-bastion-sg",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-public-bastion-sg",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-216818074",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e6dd33171f21d00f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4016642885",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e6dd33171f21d00f",
            "security_group_rule_id": "sgr-014a07fa98a8f254d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:network-acl/acl-0b79967d3285b7dfa",
            "default_network_acl_id": "acl-0b79967d3285b7dfa",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b79967d3285b7dfa",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "063965251904",
            "subnet_ids": [
              "subnet-05bd3350623597898",
              "subnet-073992e934f2352d0",
              "subnet-0bfe497e134b1efc2",
              "subnet-0cde9a50d605c6b2a",
              "subnet-0eb07858c67cbd694",
              "subnet-0f4cf471d87a53d76"
            ],
            "tags": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:route-table/rtb-046182530ca4474dc",
            "default_route_table_id": "rtb-046182530ca4474dc",
            "id": "rtb-046182530ca4474dc",
            "owner_id": "063965251904",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:security-group/sg-0bfffd9742682c442",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bfffd9742682c442",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "063965251904",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086b43f4b869e9737",
            "association_id": "eipassoc-0a37c9ddb7f1e94a3",
            "domain": "vpc",
            "id": "eipalloc-086b43f4b869e9737",
            "network_border_group": "us-east-1",
            "network_interface": "eni-073314d5aec3f43e9",
            "private_dns": "ip-10-0-101-148.ec2.internal",
            "private_ip": "10.0.101.148",
            "public_dns": "ec2-52-72-59-103.compute-1.amazonaws.com",
            "public_ip": "52.72.59.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hr-stag-eksdemo1-us-east-1a",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-us-east-1a",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:internet-gateway/igw-09babc2e29d820302",
            "id": "igw-09babc2e29d820302",
            "owner_id": "063965251904",
            "tags": {
              "Name": "hr-stag-eksdemo1",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086b43f4b869e9737",
            "association_id": "eipassoc-0a37c9ddb7f1e94a3",
            "connectivity_type": "public",
            "id": "nat-0465353d288d32d59",
            "network_interface_id": "eni-073314d5aec3f43e9",
            "private_ip": "10.0.101.148",
            "public_ip": "52.72.59.103",
            "subnet_id": "subnet-0eb07858c67cbd694",
            "tags": {
              "Name": "hr-stag-eksdemo1-us-east-1a",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-us-east-1a",
              "environment": "stag",
              "owners": "hr"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0caf64cd861de5be81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0465353d288d32d59",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0caf64cd861de5be8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09babc2e29d820302",
            "id": "r-rtb-08bcb012d386c8a7f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08bcb012d386c8a7f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:route-table/rtb-06d1a9d4a11c0f8b3",
            "id": "rtb-06d1a9d4a11c0f8b3",
            "owner_id": "063965251904",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hr-stag-eksdemo1-db",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-db",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:route-table/rtb-0caf64cd861de5be8",
            "id": "rtb-0caf64cd861de5be8",
            "owner_id": "063965251904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0465353d288d32d59",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hr-stag-eksdemo1-private",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-private",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:route-table/rtb-08bcb012d386c8a7f",
            "id": "rtb-08bcb012d386c8a7f",
            "owner_id": "063965251904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09babc2e29d820302",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hr-stag-eksdemo1-public",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-public",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b84d690f47528aed",
            "route_table_id": "rtb-06d1a9d4a11c0f8b3",
            "subnet_id": "subnet-05bd3350623597898"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb700196d40a138f",
            "route_table_id": "rtb-06d1a9d4a11c0f8b3",
            "subnet_id": "subnet-0f4cf471d87a53d76"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0928fe346dc4eac21",
            "route_table_id": "rtb-0caf64cd861de5be8",
            "subnet_id": "subnet-0bfe497e134b1efc2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f678564eba68675c",
            "route_table_id": "rtb-0caf64cd861de5be8",
            "subnet_id": "subnet-0cde9a50d605c6b2a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319f5f93a5727e39",
            "route_table_id": "rtb-08bcb012d386c8a7f",
            "subnet_id": "subnet-0eb07858c67cbd694"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd0972faa9c14a95",
            "route_table_id": "rtb-08bcb012d386c8a7f",
            "subnet_id": "subnet-073992e934f2352d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:subnet/subnet-05bd3350623597898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bd3350623597898",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063965251904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-eksdemo1-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:subnet/subnet-0f4cf471d87a53d76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4cf471d87a53d76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063965251904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-eksdemo1-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:subnet/subnet-0bfe497e134b1efc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfe497e134b1efc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063965251904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-eksdemo1-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:subnet/subnet-0cde9a50d605c6b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde9a50d605c6b2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063965251904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-eksdemo1-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:subnet/subnet-0eb07858c67cbd694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb07858c67cbd694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063965251904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-eksdemo1-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:subnet/subnet-073992e934f2352d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073992e934f2352d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "063965251904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-eksdemo1-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0f6d1ce4a9597935f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063965251904:vpc/vpc-0f6d1ce4a9597935f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b79967d3285b7dfa",
            "default_route_table_id": "rtb-046182530ca4474dc",
            "default_security_group_id": "sg-0bfffd9742682c442",
            "dhcp_options_id": "dopt-0cd1b2288882a6064",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6d1ce4a9597935f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046182530ca4474dc",
            "owner_id": "063965251904",
            "tags": {
              "Name": "hr-stag-eksdemo1",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1",
              "environment": "stag",
              "owners": "hr"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}